--- a/H2_MBbackground.tex
+++ b/H2_MBbackground.tex
@@ -193,7 +193,7 @@ A FASTQ file uses four lines per sequenced DNA fragment:
 	\item The quality values for each respective base in line~\ref{enumIt:fastqRaw}. The length of this line must be the same as the number of bases in line~\ref{enumIt:fastqRaw}.
 \end{enumerate}
 
-The quality score in memory is a value in the range $0x21$ (lowest quality) to $0x7e$ (highest quality). Since this value is represented in ASCII in the file format, this ranges from the '$!$' character to the '$\mathtt{\sim}$' character. Hereunder is a complete list of the possible values of the quality score:
+The quality score in memory is a value in the range $0x21$ (lowest quality) to $0x7e$ (highest quality). Since this value is represented in ASCII in the file format, this ranges from the '$!$' character to the '$\mathtt{\sim}$' character. A complete list of the possible values for the quality score can be found below:
 
 \begin{lcverbatim}
 !"#$%&'()*+,-./0123456789:;<=>?@ABCDEFGHIJKLMNOPQRSTUVWXYZ
