--- a/afkortingen.tex
+++ b/afkortingen.tex
@@ -24,12 +24,12 @@
 \textbf{Indel} - \textit{Insertion or Deletion} - A single term to describe an insertion or deletion in DNA \\
 \textbf{MPSoC} - \textit{Multi-Processor System on Chip} - An integrated circuit that containts multiple microprocessors and/or programmable hardware \\
 \textbf{NGS} - \textit{Next Generation Sequencing} - The technique used most often to determine the sequence DNA \\
-\textbf{NIPT} - \textit{Non-Invasive Prenatal Testing} - a test for detecting genetic defects in a foetus \\
+\textbf{NIPT} - \textit{Non-Invasive Prenatal Testing} - A test for detecting genetic defects in a foetus \\
 \textbf{N-W } - \textit{Needleman-Wunch algorithm} - An algorithm used for global alignment, which is similar to Smith-Waterman \\
 \textbf{SAM} - \textit{Sequence Alignment Map} - The file format used for storing mapped reads, text-based \\
 \textbf{SIMD} - \textit{Single Instruction Multiple Data} - A technology in CPUs that can manipulate more than 1 attribute with a single instruction \\
 \textbf{S-W} - \textit{Smith-Waterman algorithm} - A variation of the N-W algorithm, adapted for local alignment. It is a dynamic programming technique \\
-\textbf{sWGS} - \textit{shallow Whole-Genome Sequencing} - an experiment to detect gains and losses in DNA material \\
+\textbf{sWGS} - \textit{shallow Whole-Genome Sequencing} - An experiment to detect gains and losses in DNA material \\
 \textbf{T} - \textit{Thymine} - One of the 4 nitrogen bases present in DNA \\
 \textbf{USB} - \textit{Universial Serial Bus} - An industry standard for connections between a computer and peripherals \\
 
