--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -119,7 +119,7 @@
 
 @MASTERSTHESIS{fpgaImpl,
 	author = {Corey Bruce Olson},
-	title = {An FPGA acceleration of short read human genome mapping},
+	title = {An {FPGA} acceleration of short read human genome mapping},
 	year = 2011,
 	school = {University of Washington}
 }
@@ -229,7 +229,7 @@
 @MISC{fpgacomparison,
 	year = {March 2020},
 	organization = {Microsoft},
-	title = {Azure machine learning FPGA comparison},
+	title = {Azure machine learning {FPGA} comparison},
 	howpublished = {https://docs.microsoft.com/en-us/azure/machine-learning/service/media/concept-accelerate-with-fpgas/azure-machine-learning-fpga-comparison.png}
 }
 
