--- a/fiiw.sty
+++ b/fiiw.sty
@@ -258,7 +258,7 @@
 		\ParallelRText{\noindent \vspace{1em}
 			\large\begin{flushright}
 				Masterproef ingediend tot het behalen van \\
-				de graad van master of Science in de\\
+				de graad van Master of Science in de\\
 				Industri\"ele wetenschappen: \@opleiding\ \@afdeling
 			\end{flushright}
 		}
