--- a/thesis.tex
+++ b/thesis.tex
@@ -43,7 +43,11 @@
 
 \usepackage{listings}					% C code
 \usepackage{setspace}					% interlinieafstand instellen
-	
+
+
+\usepackage[none]{hyphenat}				%woordsplitsing afzetten
+\hyphenpenalty 10000
+\exhyphenpenalty 10000
 
 % MFA: zet zoekpad voor figure
 \graphicspath{{fig/}}
