--- a/voorwoord.tex
+++ b/voorwoord.tex
@@ -5,7 +5,7 @@ From the Brno University of Technology (BUT) I would like to thank the following
 	\item \textbf{Ing. Vojt\v ech Mr\'azek, Ph.D.} for providing the ZCU 104 evaluation kit hardware.
 \end{itemize}
 
-From KU Leuven I would like to thank the following people:
+From KU Leuven I would like to acknowledge the following people:
 \begin{itemize}
 	\item \textbf{Ing. Jonas Lannoo,
 		Ph.D. Student} as a supervisor for his support during my Erasmus towards the thesis.
@@ -14,9 +14,9 @@ From KU Leuven I would like to thank the following people:
 
 I would also want to thank my father \textbf{Friedel Nollet, Ph.D.} (molecular biologist at the AZ Sint-Jan Hospital in Bruges) for the original idea of implementing the genome mapping problem, as well as fact-checking my thesis for the biology part and providing me with sample data.
 
-This thesis was executed during my time as an Erasmus exchange student at the Brno Univerity of Technology. I would also want to thank the BUT for accepting me as an incoming Erasmus student.
+This thesis was executed during my time as an Erasmus exchange student at the Brno University of Technology. I would like to acknowledge the BUT for accepting me as an incoming Erasmus student.
 
-Furthermore, I would like to thank \textbf{ir. Joan Peuteman, Ph.D.}, \textbf{ir. Hilde Bonte} and \textbf{Ing. Michaela Studena} for helping me in the administration needed for the Erasmus exchange.
+Furthermore, thanks to \textbf{ir. Joan Peuteman, Ph.D.}, \textbf{ir. Hilde Bonte} and \textbf{Ing. Michaela Studena} for helping me in the administration needed for the Erasmus exchange.
 
 \begin{figure}[H]
 	\centering
